--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       var cnv=document.getElementById('canvas');
       cnv.requestFullscreen=null;
       cnv.webkitRequestFullscreen=null;
+      cnv.mozRequestFullScreen=null;
       // Для того, чтобы текст правильно масштабировался
       var scaleFactor;
       var enableConsoleHelper = true;
